frontend/test/should_pass/attrib_015.grg
using attrib_model_001;

rule r {
	nb : NBOOL;
	nd : NDOUBLE;
	-eb:EBOOL->;
	-ed:EDOUBLE->;

	modify {
		eval {
			nb.a = true;
			nd.a = 1.0;

			eb.a = false;
			ed.a = 2.0;

			nb.a = nd.a == ed.a;
			nb.a = nd.a != ed.a;
			nb.a = nd.a <  ed.a;
			nb.a = nd.a >  ed.a;
			nb.a = nd.a <= ed.a;
			nb.a = nd.a >= ed.a;
		}
	}
}

