frontend/test/should_fail/basic_062.grg
using attrib_model_001;

rule r {
	x: NBOOL;
	q: Q;

	modify {
		eval {
			x.a = false == q.a;
		}
	}
}

